--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.langchao.mamanage">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <application
         android:name=".volley.App"
         android:allowBackup="true"
@@ -32,6 +40,12 @@
         </activity>
         <activity android:name=".activity.ServiceActivity" />
         <activity android:name=".activity.main.SetActivity" />
+        <activity android:name=".activity.dirout.DiroutOrderActivity" />
+        <activity android:name=".activity.dirout.DiroutListActivity" />
+        <activity android:name=".activity.dirout.DiroutOrderConfirmActivity" />
+        <activity android:name=".activity.icinbill.IcinListActivity" />
+        <activity android:name=".activity.icinbill.IcinOrderActivity" />
+        <activity android:name=".activity.icinbill.IcinOrderConfirmActivity" />
         <activity android:name=".activity.main.InStorageActivity"></activity>
     </application>
 
