--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.zhy:autolayout:1.4.3'
     compile 'org.xutils:xutils:3.3.36'
     compile 'com.beardedhen:androidbootstrap:2.2.0'
+    compile 'com.alibaba:fastjson:1.2.12'
 }
