--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.langchao.mamanage">
+
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -51,6 +53,8 @@
         <activity android:name=".activity.icoutbill.IcoutListActivity" android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".activity.icoutbill.IcoutInbillConfirmActivity" />
         <activity android:name=".activity.main.PrintActivity" />
+        <activity android:name=".blueprint.PrintDataActivity" />
+        <activity android:name=".blueprint.BluetoothActivity" />
         <activity android:name=".activity.main.InStorageActivity"></activity>
     </application>
 
