--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".activity.main.PrintActivity" />
         <activity android:name=".lcprint.BluetoothActivity" />
         <activity android:name=".lcprint.PrintDataActivity" />
+        <activity android:name=".activity.SelectPicPopupWindow" />
         <activity android:name=".activity.main.InStorageActivity"></activity>
     </application>
 
