--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'org.xutils:xutils:3.3.36'
     compile 'com.beardedhen:androidbootstrap:2.2.0'
     compile 'com.alibaba:fastjson:1.2.12'
+    compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
 }
