--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,11 @@ dependencies {
     compile 'com.beardedhen:androidbootstrap:2.2.0'
     compile 'com.alibaba:fastjson:1.2.12'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
+    compile 'me.iwf.photopicker:PhotoPicker:0.8.10@aar'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
